Added display of solutions for game "Queens".

--- a/Queens/index.html
+++ b/Queens/index.html
@@ -146,6 +146,13 @@
         </div>
     </section>
 
+    <section>
+        <p>Solutions</p>
+        <div id="solutions">
+            
+        </div>
+    </section>
+
     <script src="./algorithm.js"></script>
     <script src="./script.js"></script>
 </body>
