Added functions to load preset dataset for game "Queens".

--- a/Queens/index.html
+++ b/Queens/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <section>
-        <p>Select Color</p>
+        <h2>Select Color</h2>
         <div id="color-selector-bar">
             <div class="color-0"></div>
             <div class="color-1"></div>
@@ -26,14 +26,16 @@
     </section>
 
     <section>
-        <p>Current Color</p>
+        <h2>Current Color</h2>
         <div id="current-color-bar">
             <div class="color-0"></div>
         </div>
     </section>
 
     <section>
-        <p>Game Board</p>
+        <h2>Game Board</h2>
+        <p>To load the preset board, click the following button.</p>
+        <p><button type="button" id="load-preset-board-button">Load</button></p>
         <div id="board">
             <table>
                 <tr>
@@ -137,19 +139,14 @@
                 </tr>
             </table>
         </div>
-    </section>
-
-    <section>
         <p>Click here to get solutions.</p>
-        <div>
-            <button type="button" id="submit-button">Submit</button>
-        </div>
+        <p><button type="button" id="submit-button">Submit</button></p>
     </section>
 
     <section>
-        <p>Solutions</p>
+        <h2>Solutions</h2>
         <div id="solutions">
-            
+
         </div>
     </section>
 
