Restructured the game "Queens".

--- a/Queens/index.html
+++ b/Queens/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hydrangea LinkedIn Games - Queens</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+
+    <section>
+        <p>This script only supports 9 &times; 9 game boards.</p>
+        <p>Will update to fit 8 &times; 8 game boards soon.</p>
+    </section>
 
     <section>
         <h2>Select Color</h2>
@@ -150,8 +155,8 @@
         </div>
     </section>
 
-    <script src="./algorithm.js"></script>
-    <script src="./script.js"></script>
+    <script src="./js/algorithm.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
